--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: pycsdr
-Maintainer: Jakob Ketterl <jakob.ketterl@gmx.de>
+Maintainer: Marat Fayzullin <luarvique@gmail.com>
 Section: hamradio
 Priority: optional
 Standards-Version: 4.3.0
